fix: technical skills alignment

--- a/src/components/about/Skills.scss
+++ b/src/components/about/Skills.scss
@@ -1,7 +1,24 @@
 @import '../../scss/global.scss';
 
-.skills {
-  strong {
-    font-weight: $font-weight-light;
+.skills-set {
+  .skills {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: stretch;
+    padding-left: 0;
+    list-style: none;
+    
+    li {
+      // flex item
+      flex: 0 1 120px;
+      // flex-container
+      display: flex;
+      flex-flow: column wrap;
+      justify-content: space-around;
+      align-items: center;
+      strong {
+        font-weight: $font-weight-light;
+      }
+    }
   }
 }
